class Film extends Video{

    public Film(String name, String releaseDate, String genre, float rating) {
        super(name, releaseDate, genre, rating);
    }
    @Override
    public String toString() {
        return super.toString();
    }
}
