import java.util.ArrayList;

public class Main {

    public static void main(String[] args) {

        Stream stream = new Stream("toString'n'Chill");
        stream.setup();
        stream.runDialog();

    }
}
